# blang

./: CMakeLists.txt  README.txt  main.cc  notes.txt  syntax.txt
lexer/: .gitignore  CMakeLists.txt  input.txt  lexer.cc  lexer.h  reference.txt  test.sh
lexer/test/: ex1.b  ex2.b
parser/: CMakeLists.txt  parser.cc  parser.h
scanner/: scanner.cc
symbol_table/: symbol_table.cc
